add automatic ellipsis and indentation for documentation typing