@@ -1,12 +1,15 @@
-package com.github.jnhyperion.hyperrobotframeworkplugin.ide;
+package com.github.jnhyperion.hyperrobotframeworkplugin.ide.actionhandler;
 
+import com.github.jnhyperion.hyperrobotframeworkplugin.psi.RobotFeatureFileType;
+import com.github.jnhyperion.hyperrobotframeworkplugin.psi.RobotResourceFileType;
 import com.github.jnhyperion.hyperrobotframeworkplugin.psi.RobotStubTokenTypes;
 import com.github.jnhyperion.hyperrobotframeworkplugin.psi.RobotTokenTypes;
-import com.github.jnhyperion.hyperrobotframeworkplugin.psi.element.RobotFile;
+import com.github.jnhyperion.hyperrobotframeworkplugin.util.GlobalConstants;
 import com.intellij.codeInsight.editorActions.enter.EnterHandlerDelegateAdapter;
 import com.intellij.openapi.actionSystem.DataContext;
 import com.intellij.openapi.editor.Document;
 import com.intellij.openapi.editor.Editor;
+import com.intellij.openapi.fileTypes.FileType;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.PsiWhiteSpace;
@@ -25,7 +28,8 @@ public class RobotEnterActionHandler extends EnterHandlerDelegateAdapter {
 
     @Override
     public Result postProcessEnter(@NotNull PsiFile psiFile, @NotNull Editor editor, @NotNull DataContext context) {
-        if (psiFile instanceof RobotFile) {
+        FileType fileType = psiFile.getFileType();
+        if (fileType == RobotFeatureFileType.getInstance() || fileType == RobotResourceFileType.getInstance()) {
             int caretOffset = editor.getCaretModel().getOffset();
             Document document = editor.getDocument();
             int lineNumberOffset = document.getLineNumber(caretOffset) - 1;
@@ -41,11 +45,11 @@ public class RobotEnterActionHandler extends EnterHandlerDelegateAdapter {
             }
 
             if (!results.isEmpty()) {
-                PsiElement element = results.get(0);
+                PsiElement element = results.getFirst();
                 IElementType type = element.getNode().getElementType();
                 if (!results.isEmpty() &&
                     (type == RobotStubTokenTypes.KEYWORD_DEFINITION || type == RobotTokenTypes.SYNTAX_MARKER && INTERACTION_WORDS.contains(element.getText()))) {
-                    document.insertString(caretOffset, "    ");
+                    document.insertString(caretOffset, GlobalConstants.DEFAULT_INDENTATION);
                 }
             }
         }
